fixes table layout issue affecting bg-color in safari

--- a/cdap-ui/app/features/admin/admin.less
+++ b/cdap-ui/app/features/admin/admin.less
@@ -144,6 +144,16 @@ body.theme-cdap {
       }
     }
   }
+  &.state-admin-system-configuration {
+    main.container {
+      .table {
+        table-layout: fixed;
+        td {
+          word-wrap: break-word;
+        }
+      }
+    }
+  }
   &.state-admin-namespace-detail-data-streammetadata {
     .form-horizontal {
 
